[project]
name = "ads_pytest_parser"
version = "0.0.1"
authors = [
  { name="VisualLabs Kft", email="" },
  { name="Aron Pal-Jakab", email="aron.paljakab@visuallabs.hu" },
]
description = "Associate DevOps test cases with pytest XML results"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VisualLabs-Kft/vl-ads-pytest-parser"
"Bug Tracker" = "https://github.com/VisualLabs-Kft/vl-ads-pytest-parser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"