[project]
name = "ads-pytest-parser"
version = "0.0.2"
authors = [
  { name="VisualLabs Kft", email="aron.paljakab@visuallabs.hu" },
  { name="Aron Pal-Jakab", email="aron.paljakab@visuallabs.hu" },
]
description = "Associate DevOps test cases with pytest XML results"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
ads-pytest-parser = "ads_pytest_parser.assoc_devops_testcase_pytest_results:main"

[project.urls]
"Homepage" = "https://github.com/VisualLabs-Kft/vl-ads-pytest-parser"
"Bug Tracker" = "https://github.com/VisualLabs-Kft/vl-ads-pytest-parser/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"